workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoContrato_Event__e/FavorecidoRemuneracaoContrato_Event__e.object-meta.xml
<CustomObject>
    <label>FavorecidoRemuneracaoContrato Event</label>
    <pluralLabel>FavorecidoRemuneracaoContrato Events</pluralLabel>
</CustomObject>