workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoContrato_Event__e/fields/CorretorLider__c.field-meta.xml
<CustomField>
    <fullName>CorretorLider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CorretorLider</label>
    <type>Checkbox</type>
</CustomField>