workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoContrato_Event__e/fields/RemuneracaoContrato__c.field-meta.xml
<CustomField>
    <fullName>RemuneracaoContrato__c</fullName>
    <label>RemuneracaoContrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>