workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoContrato_Event__e/fields/Susep__c.field-meta.xml
<CustomField>
    <fullName>Susep__c</fullName>
    <label>Susep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>