workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoContrato_Event__e/fields/SusepEmissao__c.field-meta.xml
<CustomField>
    <fullName>SusepEmissao__c</fullName>
    <label>SusepEmissao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>