workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoContrato_Event__e/fields/SusepOficialCorretor__c.field-meta.xml
<CustomField>
    <fullName>SusepOficialCorretor__c</fullName>
    <label>SusepOficialCorretor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>