workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoContrato_Event__e/fields/SusepOrcamento__c.field-meta.xml
<CustomField>
    <fullName>SusepOrcamento__c</fullName>
    <label>SusepOrcamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>